FIX: changed to white text to improve WAVE contrast

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -8,7 +8,7 @@
     /* colors generated by adobe colour wheel */
     --primary-color: #9dc6e0;
     /* light blue */
-    --secondary-color: #3fa7e7;
+    --secondary-color: #0477bf;
     /* blue */
     --highlight-color: #1bb5f1;
     /* blue */
@@ -27,7 +27,8 @@ body {
     color: var(--black-color);
 }
 
-h1, h2 {
+h1,
+h2 {
     font-family: var(--primary-font);
     color: var(--black-color);
 }
@@ -38,18 +39,25 @@ h3 {
 }
 
 /* base.html */
+.navbar-brand {
+    color: var(--light-highlight-color);
+    font-family: var(--primary-font);
+    font-size: 24px;
+}
+
 #navbar {
     background-color: var(--secondary-color);
 }
 
 .nav-item .nav-link {
-    font-family: var(--primary-font);
+    font-family: var(--secondary-font);
+    color: var(--light-highlight-color);
     font-size: 18px;
-    font-weight: 400px;
+    font-weight: 500px;
 }
 
 .nav-item .active {
-    font-weight:800px;
+    font-weight: bold;
 }
 
 footer {
@@ -57,14 +65,15 @@ footer {
     padding-bottom: 1.2rem;
     text-align: center;
     font-size: 18px;
-    font-weight: 800px;
+    font-weight: 300px;
     font-family: var(--primary-font);
+    color: var(--light-highlight-color);
     bottom: 0;
     /* vertically align text closer to center */
     padding-top: 1rem;
     /* stick footer to bottom of page */
-    bottom:0;
-    width:100%;
+    bottom: 0;
+    width: 100%;
 }
 
 main {
@@ -101,13 +110,15 @@ button.expand-btn {
     background-color: var(--highlight-color);
 }
 
-.table-row, .booking-row {
+.table-row,
+.booking-row {
     border-bottom: 1px solid gray;
 }
 
-.table-row div, .booking-row div {
+.table-row div,
+.booking-row div {
     padding-bottom: 2px;
-} 
+}
 
 .table-row-odd {
     background-color: lightgray;
@@ -120,5 +131,5 @@ button.expand-btn {
 /* accordion styling */
 #passengerAccordion {
     margin-top: 1.02rem;
-    border-color: rgba(0,0,0,.125);
+    border-color: rgba(0, 0, 0, .125);
 }
